# selecting

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/sys/: mod.rs  unix.rs  windows.rs
tests/: tcp.rs
